--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "snowflake-cpp"]
 	path = snowflake-cpp
-	url = git@github.com:shlee322/snowflake-cpp.git
+	url = git://github.com/shlee322/snowflake-cpp.git
